# platform-engineering-idp-gitops-reference-architecture

./: .gitignore  Makefile  README.md  bootstrap.yaml  renovate.json
1-idp-scaffolder/: README.md  api.py  cli.py  copier.yml  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py
1-idp-scaffolder/1_idp_scaffolder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
1-idp-scaffolder/templates/app-source-repo-common/.github/workflows/: ci.yaml
1-idp-scaffolder/templates/app-source-repo-types/golang/: go.mod
1-idp-scaffolder/templates/app-source-repo-types/python/: main.py
1-idp-scaffolder/templates/apps-source/nodejs/: package.json
1-idp-scaffolder/templates/apps-source/springboot/: copier.yml  pom.xml
1-idp-scaffolder/templates/cloud-services/aws-iam/: main.tf
1-idp-scaffolder/templates/cloud-services/aws-networking/: vpc.tf
1-idp-scaffolder/templates/cloud-services/aws-postgres/: main.tf
1-idp-scaffolder/templates/cloud-services/aws-s3/: main.tf
1-idp-scaffolder/templates/gitops-repo/.github/workflows/: cd.yaml
1-idp-scaffolder/templates/gitops-repo/templated-manifests/: values.yaml
1-idp-scaffolder/templates/platform/cloud-services/aws-networking/: vpc.tf
1-idp-scaffolder/templates/platform/cloud-services/aws-postgres/: main.tf
1-idp-scaffolder/templates/platform/cloud-services/aws-s3/: main.tf
1-idp-scaffolder/templates/tenant-template/: copier.yml
1-idp-scaffolder/templates/tenant-template/{{team_name}}/infra-repo/dev/: team-base.tf.jinja  (+1 more)
1-idp-scaffolder/templates/user/infra-repo/prod/: main.tf
(+156 files in other folders)
