[project]
name = "1-idp-scaffolder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "binaryornot>=0.6.0",
    "copier>=9.15.1",
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "logger>=1.4",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
]

[project.scripts]
scaffolder = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "cli.py", "schemas.py", "utils.py"]
